20210927:
  * added ONNX/PyTorch workflows for MLPerf medical imaging and a package for BraTS 2019 data set
  * added CK package for MLPerf inference results v1.1

20210921:
  * removed some non-ML benchmarks and datasets: they are available in ctuning@ctuning-programs and ctuning@ctuning-datasets-min repos
  * removed Windows components: they are available in ctuning@ck-win

20210906:
  * cTuning foundation and OctoML donated this repository to MLCommons
    as a part of their MLPerf inference benchmark v1.1 submission.

20210813:
  * added TF Python 2.6.0 variation

20210808:
  * added TFLite python package for the reference MLPerf benchmark

20210806:
  * added variations for PyTorch&TorchVision CUDA
  * added TF python packages (CPU & GPU)
  * added latest versions of transformers (Python lib)
  * added the latest version of TFLite

20210805:
  * added older variations in torchvision package to support older PyTorch versions for MLPerf inference benchmark

20210804:
  * enhanced image classification with TFLite and loadgen
  * removed outdated packages/scripts/programs

20210731:
  * added new version to tool.cmake and aarch64 support

20210730:
  * added soft:lib.dnnl

202107026:
  * added latest PyTorchVision varations up to 0.10. as asked by users
    (package:lib-python-torchvision)
  * added latest PyTorch varations up to 1.9.0 as asked by users
    (package:lib-python-torch)

20210723:
  * added docker:test-ck to test CK functionality, workflows and components
    (to be extended) - we plan to use it to gradually substitute travis CI 
    with GitHub actions

20210720:
  * added ML_MODEL_ROOT env to ML model detection and installation scripts
  * added CK_ENV_DATASET_ROOT env to ImageNet and COCO datasets

20210717:
  * added script:process-model to process common paramaters
    of different ML models

20210712:
  * added "add bench.mlperf.system" and improved MLPerf docs

20210710:
  * added Paretor frontier filter demo